@@ -17,7 +17,7 @@ extern "C" {
 
 #define FFMPEG_VERSION_INT     0x000409
 #define FFMPEG_VERSION         "0.4.9-pre1"
-#define LIBAVCODEC_BUILD       4748
+#define LIBAVCODEC_BUILD       4749
 
 #define LIBAVCODEC_VERSION_INT FFMPEG_VERSION_INT
 #define LIBAVCODEC_VERSION     FFMPEG_VERSION
@@ -105,6 +105,7 @@ enum CodecID {
     CODEC_ID_VC9,
     CODEC_ID_WMV3,
     CODEC_ID_LOCO,
+    CODEC_ID_WNV1,
 
     /* various pcm "codecs" */
     CODEC_ID_PCM_S16LE= 0x10000,
@@ -2005,6 +2006,7 @@ extern AVCodec xl_decoder;
 extern AVCodec qpeg_decoder;
 extern AVCodec shorten_decoder;
 extern AVCodec loco_decoder;
+extern AVCodec wnv1_decoder;
 extern AVCodec alac_decoder;
 
 /* pcm codecs */
